# aws-bot

./: .env.example  .gitignore  cdk.json  infra.py  pyproject.toml  requirements.txt  stack.py
app/: main.py  requirenents.txt
infa/: docker-compose.yml
notebooks/: 001-ingestion-data-into-opensearch.ipynb  002-retrieval-opensearch.ipynb
